--- a/products/deploy/workload.yaml
+++ b/products/deploy/workload.yaml
@@ -11,8 +11,8 @@ data:
   # It mounts the secret to that path.
   # The secret is created in the deploy.sh file for this service
   SERVICE_ACCOUNT_FILE_NAME: "/sa/service_account.json" 
-  PROJECT_ID: "ace-demo-2"
-  PRODUCT_CACHE_BUCKET: "fs2-public-bucket"
+  PROJECT_ID: "find-seller-app-senthil"
+  PRODUCT_CACHE_BUCKET: "fs-sen-dev-public-bucket"
 ---
 apiVersion: "extensions/v1beta1"
 kind: "Deployment"
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: "products"
-        image: "gcr.io/ace-demo-2/products:latest"
+        image: "gcr.io/find-seller-app-senthil/products:latest"
         volumeMounts:
         - name: service-account
           mountPath: "/sa/"
